--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compliler:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
